--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+Pygments==1.6
 SPARQLWrapper==1.5.2
 html5lib==0.95
 isodate==0.4.9
+lxml==3.2.3
 pyparsing==1.5.7
+pystache==0.5.3
+pytz==2013b
 rdflib==4.0.1
+requests==1.2.3
 wsgiref==0.1.2
